BACKLOG-12896 - Fix spacing for cards

--- a/src/javascript/Dashboard/WelcomeScreen/Card/Card.scss
+++ b/src/javascript/Dashboard/WelcomeScreen/Card/Card.scss
@@ -30,7 +30,7 @@
 }
 
 .textContainer {
-    width: 80%;
+    width: 100%;
 
     h3,
     p {
